# web-auth-rs

./: Cargo.toml  README.md
examples/actix-full-example/: Cargo.toml
examples/actix-full-example/src/: main.rs
examples/axum-full-example/: Cargo.toml
examples/axum-full-example/src/: main.rs
src/: jwt.rs  lib.rs
src/core/: authentication.rs  authorization.rs  futures.rs  http.rs  mod.rs  principal.rs
src/framework/: actix_auth.rs  axum_auth.rs  mod.rs  tower.rs  tower_auth.rs
