[package]
name = "web-auth-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/*"]

[dependencies]
actix-web = { version = "4", default-features = false, optional = true }
axum-core = { version = "0.3", optional = true }
anyhow = { version = "1" }
async-trait = { version = "0.1" }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
http = { version = "0.2" }
jsonwebtoken = { version = "9.1", default-features = false, optional = true }
pin-project = { version = "1" }
serde_json = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }

[features]
actix = ["dep:actix-web"]
axum = ["tower", "dep:axum-core"]
jwt = ["dep:jsonwebtoken", "dep:serde_json"]
tower = ["dep:tower"]
