[package]
name = "axum-full-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6" }
http = { version = "0.2" }
http-body = { version = "0.4" }
static_assertions = { version = "1" }
tokio = { version = "1.33", features = ["full"] }
web-auth-rs = { path = "../../", features = ["tower", "jwt"] }
